--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         listen 8080;
         server_name localhost;
 
-        root /app/frontend/dist;
+        root /app/frontend-dist;
         index index.html;
 
         location / {
@@ -29,7 +29,7 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;
+            alias /app/staticfiles/;
         }
     }
 }
