Fix frontend file copy conflict by using separate static directory

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
         listen 8080;
         server_name localhost;
 
-        root /app/frontend/dist;
+        root /app/static/frontend;
         index index.html;
 
         location / {
