Fix nginx daemon mode and improve logging for troubleshooting

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+daemon off;
+
 events {
     worker_connections 1024;
 }
@@ -8,6 +10,9 @@ http {
 
     sendfile on;
     keepalive_timeout 65;
+
+    access_log /dev/stdout;
+    error_log /dev/stderr;
 
     server {
         listen 8080;
