--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ autorestart=true
 redirect_stderr=true
 
 [program:nginx]
-command=nginx -c /etc/nginx/nginx.conf -g "daemon off;"
+command=nginx -c /etc/nginx/nginx.conf
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
