Add debug headers and permissions check for nginx troubleshooting

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,13 +14,17 @@ http {
 
     server {
         listen 8080;
-        server_name localhost;
+        server_name _;
 
         root /app/static/frontend;
         index index.html;
 
+        # Debug headers
+        add_header X-Debug-Root $document_root;
+        add_header X-Debug-URI $uri;
+
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
         }
 
         location /api/ {
