--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     error_log /dev/stderr;
 
     server {
-        listen 8080;
+        listen ${PORT};
         server_name _;
 
         root /app/static/frontend;
