Add debug logging to Django gunicorn to troubleshoot API connection issues

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,10 +2,13 @@
 nodaemon=true
 
 [program:django]
-command=gunicorn --bind 0.0.0.0:8000 timetable_project.wsgi:application
+command=gunicorn --bind 0.0.0.0:8000 --workers 2 --log-level debug --access-logfile - --error-logfile - timetable_project.wsgi:application
 directory=/app
 autorestart=true
-redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g "daemon off;"
