--- a/nginx.conf
+++ b/nginx.conf
@@ -28,11 +28,17 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://localhost:8000/;
+            proxy_pass http://localhost:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Debug headers
+            add_header X-Debug-Proxy-To http://localhost:8000;
+            add_header X-Debug-Original-URI $request_uri;
         }
 
         location /static/ {
